fix z-index and border-radius ymaps

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -111,6 +111,7 @@
   @media (max-width: 640px) {
     position: sticky;
     top: 0;
+    z-index: 6000;
 
     svg {
       width: 103px;
